--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -23,7 +23,9 @@ jobs:
         with:
           node-version: "22"
           cache: "npm"
-          cache-dependency-path: sigbang_user_front/package-lock.json
+          cache-dependency-path: |
+            sigbang_user_front/package-lock.json
+            package-lock.json
 
       - name: Install
         run: npm install --no-audit --no-fund
